--- a/css/main.css
+++ b/css/main.css
@@ -1558,6 +1558,40 @@ img {
     padding: 13px 30px 12px 27px;
   }
 }
+.about-section {
+  padding: 100px 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  width: 100%;
+  background-color: #C71585;
+}
+
+.wrapper {
+  top: 40%;
+  left: 25%;
+  right: 25%;
+}
+
+#date {
+  color: white;
+  text-align: center;
+  font-size: 2em;
+}
+
+#time {
+  color: white;
+  text-align: center;
+  font-size: 4em;
+}
+
+.about__title {
+  color: #fff;
+  font-size: 32px;
+  text-align: center;
+}
+
 .site-footer {
   margin: 0;
   padding: 0;
